fix not visible borders

--- a/packages/block-editor/src/components/block-list/block-mobile-floating-toolbar.native.scss
+++ b/packages/block-editor/src/components/block-list/block-mobile-floating-toolbar.native.scss
@@ -22,3 +22,8 @@ $floating-toolbar-height: 44;
 .floatingToolbarFillColorDark {
 	background-color: rgba(#3c434a, 0.85);
 }
+
+.withMargin {
+	margin-top: -16;
+	margin-bottom: 24;
+}
